Changed title from Simple Timer to Simple Timer App

--- a/task1.html
+++ b/task1.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <h1 class="title">Simple Timer</h1>
+        <h1 class="title">Simple Timer App</h1>
         <h2 id="timer">25:00</h2>
 
         <div class="button-wrapper">
